--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ layout: default
 		<div class="main fn-clear">
 			{% for rpost in paginator.posts %}
             	<article class="main-excerpt fn-clear">
-                    <h3 class="main-excerpt-title"><a href="{{ rpost.url }}" title="{{ rpost.title }}" rel="bookmark">{{ rpost.title }}</a></h3>
+                    <h3 class="main-excerpt-title"><a href="{{ rpost.url }}" title="{{ rpost.title }}" rel="bookmark" onclick="_hmt.push(['_trackPageview', '{{ rpost.url }}']);">{{ rpost.title }}</a></h3>
                     <p class="date"><time pubdate="{{ rpost.date }}">{{ rpost.date | date_to_string }}</time></p>
                     <p>{{ rpost.description }}</p>
-                   	<p class="more"><a href="{{ rpost.url }}" title="Read More" rel="nofollow"><span>&#10149;</span>Read More</a></p>
+                   	<p class="more"><a href="{{ rpost.url }}" title="Read More" rel="nofollow" onclick="_hmt.push(['_trackPageview', '{{ rpost.url }}']);"><span>&#10149;</span>Read More</a></p>
                 </article>
             {% endfor %}
             {% if paginator.total_pages > 1 %}
