add post outlinks

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ layout: default
 		<div class="aside fn-clear">
 			{% include bg-search.html %}
 			{% include bg-classification.html %}
+			{% include bg-outlinks.html %}
 			{% include bg-other.html %}
 		</div>
 	</div>
