--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ title: About & Contacts
 				<h3>About Me</h3>
 				<p>{{ site.about }}</p>
 				<h3>About The Blog</h3>
-				<p>This area will be added lately.</p>
+				<p>{{ site.about_blog }}</p>
                 <h3>Contact Me</h3>
                 <p>GTalk / GMail : <a href="mailto:{{ site.author.email }}" title="Mail to Legend">{{ site.author.email }}</a></p>
 			</article>
