--- a/outlinks.html
+++ b/outlinks.html
@@ -15,6 +15,10 @@ layout: default
                 <ul>
                     <li><a href="http://www.opengl-tutorial.org/">opengl tutorial</a></li>
                 </ul>
+                <h2 class="desc">ODE:</h2>
+                <ul>
+                    <li><a href="http://pyode.sourceforge.net/">pyode</a></li>
+                </ul>
                 <h2 class="desc">Algorithm:</h2>
                 <ul>
                     <li><a href="http://zjsblog.com/ALGO/index.html">算法笔记</a></li>
@@ -33,7 +37,8 @@ layout: default
                     <li><a href="http://www.geeksforgeeks.org">geeks for geeks</a></li>
                     <li><a href="http://blog.csdn.net/v_JULY_v">研究者July</a></li>
                     <li><a href="http://coolshell.cn/">酷壳</a></li>
-                    <li><a href="(http://leetcode.com/">leetcode</a></li>
+                    <li><a href="http://leetcode.com/">leetcode</a></li>
+                    <li><a href="http://mattn.github.io/zencoding-vim/">zencode</a></li>
                 </ul>
             </article>
 		</div>
