--- a/outlinks.html
+++ b/outlinks.html
@@ -37,6 +37,7 @@ layout: default
                     <li><a href="http://www.geeksforgeeks.org">geeks for geeks</a></li>
                     <li><a href="http://blog.csdn.net/v_JULY_v">研究者July</a></li>
                     <li><a href="http://coolshell.cn/">酷壳</a></li>
+                    <li><a href="http://mindhacks.cn/">刘未鹏</a></li>
                     <li><a href="http://leetcode.com/">leetcode</a></li>
                     <li><a href="http://mattn.github.io/zencoding-vim/">zencode</a></li>
                 </ul>
